--- a/Index.html
+++ b/Index.html
@@ -1,51 +1,65 @@
-<!-- Esta es la página web sobre la supuesta feria de comercio, sabiendo que falta información empezamos con la estructura de la página-->
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Feria de Comercio - [Nombre de la Feria]</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-            <section id="sobre-nosotros">
-                <h1>AQUI IRIA LA INFO</h1>
-                <p>Que nos tiene que dar todavía </p>
-            </section>
-        </header>
-        <hr>
-        <nav>
-            <ul>
-                <li><a href="#seccion-sobre_nosotros">Sobre Nosotros</a></li>
-                <li><a href="#seccion-ganador">Spot Ganador</a></li>
-                <li><a href="#seccion-Descargas">Descargas</a></li>
-                <li><a href="#seccion-login">Inicio de Sesion</a></li>
-                <li><a href="#seccion-Empresas">Empresas</a></li>
-            </ul>
-        </nav>
-        <hr>
-        <main>
-            <section id="seccion-ganador">
-                <h2>Ganador</h2>
-                <div class="youtube-container">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/qHSh_oEjpOs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </div>
-                <p>EL PUTO GANADOR</p>
-            </section>
-            <hr>
-            <section id="seccion-descargas">
-                <h2>AQUÍ ESTARAN LAS DESCARGAS</h2>
-            </section>
-            <hr>
-            <section id="seccion-login">
-                <h2>Aquí estará el login</h2>
-            </section>  
-        </main>
-        <hr>
-        <footer>
-            <p>© 2025 ISRAEL CARBONELL MENAL | PABLO MAZA PEÓN | IZAN RUIZ MORENO Todos los derechos reservados.</p>
-        </footer>
-
-    </body>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Feria de Comercio - Nombre de la Feria</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header>
+    <section id="sobre-nosotros">
+      <h1>AQUÍ IRÁ LA INFO</h1>
+      <p>Que nos tiene que dar todavía</p>
+    </section>
+    <nav class="navbar">
+      <ul>
+        <li><a href="#seccion-sobrenosotros">Sobre Nosotros</a></li>
+        <li><a href="#seccion-ganador">Spot Ganador</a></li>
+        <li><a href="#seccion-descargas">Descargas</a></li>
+        <li><a href="#seccion-login">Inicio de Sesión</a></li>
+        <li><a href="#seccion-empresas">Empresas</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div class="divider"></div>
+  <main>
+    <section id="seccion-ganador">
+      <h2>Ganador</h2>
+      <div class="youtube-container">
+        <iframe width="560" height="315"
+          src="https://www.youtube.com/embed/qHShoEjpOs"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+      <p>EL PUTO GANADOR</p>
+    </section>
+    <div class="divider"></div>
+    <section id="seccion-sobrenosotros">
+      <h2>Sobre Nosotros</h2>
+      <p>Contenido sobre la feria, descripción, objetivos y organización.</p>
+    </section>
+    <div class="divider"></div>
+    <section id="seccion-descargas">
+      <h2>Descargas</h2>
+      <p>Aquí podrás descargar información de la feria, programa, etc.</p>
+    </section>
+    <div class="divider"></div>
+    <section id="seccion-login">
+      <h2>Inicio de Sesión</h2>
+      <button>Entrar</button>
+    </section>
+    <div class="divider"></div>
+    <section id="seccion-empresas">
+      <h2>Empresas</h2>
+      <p>Lista de empresas participantes.</p>
+    </section>
+  </main>
+  <footer>
+    Feria de Empleo de Irún &copy; 2025
+  </footer>
+</body>
 </html>
