--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 </head>
 <body>
   <header>
-    <section id="sobre-nosotros">
-      <img src="./img/La_Salle_Santo-Angel.png" alt="imagen_la_salle" class="logo">
-    </section>
     <nav class="navbar">
       <ul>
         <li><a href="#seccion-sobrenosotros">Sobre Nosotros</a></li>
@@ -25,6 +22,7 @@
         <li><a href="#seccion-empresas">Empresas</a></li>
       </ul>
     </nav>
+    <img src="./img/logo_salle_zgz.png" alt="imagen_la_salle" class="logo">
   </header>
 
   <div class="divider"></div>
