--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-
+  <link rel="icon" type="image/png" href="./img/logo_salle_zgz.png"/>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,17 +19,14 @@
         <li><a href="#seccion-sobrenosotros">Sobre Nosotros</a></li>
         <li><a href="#seccion-ganador">Spot Ganador</a></li>
         <li><a href="#seccion-descargas">Descargas</a></li>
-        <li><a href="#seccion-login">Inicio de Sesión</a></li>
-        <li><a href="#seccion-empresas">Empresas</a></li>
        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle menu-icon-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <img src="./img/imagen_menu.png" alt="menu_icon" class="menu-icon" id="img_menu">
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Inicio de sesión</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#">Empresas</a></li>
           </ul>
         </li>
       </ul>
@@ -51,47 +48,21 @@
           allowfullscreen></iframe>
       </div>
     </section>
-
-   
-
+    
     <section id="seccion-sobrenosotros">
       <h2>Sobre Nosotros</h2>
       <p>Sobre la empresa</p>
     </section>
-
-  
 
     <section id="seccion-descargas">
       <h2>Descargas</h2>
       <p>Aquí podrás descargar información de la feria, programa, etc.</p>
     </section>
 
-   
-
-    <section id="seccion-login">
-      <h2>Inicio de Sesión</h2>
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-      </div>
-    </section>
-
-   
-
-    <section id="seccion-empresas">
-      <h2>Empresas</h2>
-      <p>Lista de empresas participantes.</p>
-    </section>
+    <footer>
+      Feria de Empleo de Irún &copy; 2025
+    </footer>
   </main>
-
-  <footer>
-    Feria de Empleo de Irún &copy; 2025
-  </footer>
-
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
