--- a/empresas.html
+++ b/empresas.html
@@ -16,9 +16,9 @@
     
     <nav class="navbar">
       <ul>
-        <li><a href="#seccion-sobrenosotros">Sobre Nosotros</a></li>
-        <li><a href="#seccion-ganador">Spot Ganador</a></li>
-        <li><a href="#seccion-descargas">Descargas</a></li>
+        <li><a href="#">Sobre Nosotros</a></li>
+        <li><a href="#">Spot Ganador</a></li>
+        <li><a href="#">Descargas</a></li>
        <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle menu-icon-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <img src="./img/imagen_menu.png" alt="menu_icon" class="menu-icon" id="img_menu">
@@ -35,37 +35,7 @@
       <img src="./img/logo_salle_zgz.png" alt="imagen_la_salle" class="logo">
     </a>
   </header>
-
-
-
-  <main>
-    <section id="seccion-sobrenosotros">
-         <h2>Sobre Nosotros</h2>
-         <p>Sobre la empresa</p>
-    </section>
-
-    <section id="seccion-ganador">
-      <h2>Ganador</h2>
-      <div class="youtube-container">
-        <iframe width="560" height="315"
-          src="https://www.youtube.com/embed/qHShoEjpOs"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
-      </div>
-    </section>
-
-    <section id="seccion-descargas">
-      <h2>Descargas</h2>
-      <p>Aquí podrás descargar información de la feria, programa, etc.</p>
-    </section>
-
-    <footer>
-      Feria de Empleo de Irún &copy; 2025
-    </footer>
-  </main>
-  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+  
