--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Feria de Empleo Irún</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="icon" type="image/png" href="./img/logo_salle_zgz.png"/>
@@ -13,37 +12,38 @@
 </head>
 <body>
   <header>
-    
     <nav class="navbar">
       <ul>
         <li><a href="#seccion-sobrenosotros">Sobre Nosotros</a></li>
         <li><a href="#seccion-ganador">Spot Ganador</a></li>
         <li><a href="#seccion-descargas">Descargas</a></li>
-       <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle menu-icon-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="./img/imagen_menu.png" alt="menu_icon" class="menu-icon" id="img_menu">
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="inicio_sesion.html">Inicio de sesión</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="empresas.html">Empresas</a></li>
-          </ul>
-        </li>
+        <li><a href="inicio_sesion.html">Inicio de sesión</a></li>
+        <li><a href="empresas.html">Empresas</a></li>
       </ul>
     </nav>
+
+    <div class="bars__menu" id="barsMenu">
+      <span class="line1__bars-menu"></span>
+      <span class="line2__bars-menu"></span>
+      <span class="line3__bars-menu"></span>
+    </div>
+
+    <div class="hamburger-dropdown" id="hamburgerMenu">
+      <ul>
+        <li><a href="#seccion-sobrenosotros">Sobre Nosotros</a></li>
+        <li><a href="#seccion-ganador">Spot Ganador</a></li>
+        <li><a href="#seccion-descargas">Descargas</a></li>
+        <li><a href="inicio_sesion.html">Inicio de sesión</a></li>
+        <li><a href="empresas.html">Empresas</a></li>
+      </ul>
+    </div>
+
     <a href="index.html">
       <img src="./img/logo_salle_zgz.png" alt="imagen_la_salle" class="logo">
     </a>
   </header>
 
-
-
   <main>
-    <section id="seccion-sobrenosotros">
-         <h2>Sobre Nosotros</h2>
-         <p>Sobre la empresa</p>
-    </section>
-
     <section id="seccion-ganador">
       <h2>Ganador</h2>
       <div class="youtube-container">
@@ -55,6 +55,11 @@
           allowfullscreen></iframe>
       </div>
     </section>
+    
+    <section id="seccion-sobrenosotros">
+      <h2>Sobre Nosotros</h2>
+      <p>Sobre la empresa</p>
+    </section>
 
     <section id="seccion-descargas">
       <h2>Descargas</h2>
@@ -65,7 +70,8 @@
       Feria de Empleo de Irún &copy; 2025
     </footer>
   </main>
-  <!-- Scripts -->
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
