--- a/index.html
+++ b/index.html
@@ -44,21 +44,27 @@
   </header>
 
   <main>
-    <section id="seccion-ganador">
-      <h2>Ganador</h2>
-      <div class="youtube-container">
-        <iframe width="560" height="315"
-          src="https://www.youtube.com/embed/qHShoEjpOs"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
-      </div>
-    </section>
-    
+        
     <section id="seccion-sobrenosotros">
       <h2>Sobre Nosotros</h2>
       <p>Sobre la empresa</p>
+    </section>
+
+    <section id="seccion-ganador" class="impar">
+      <div class="contenedor_video">
+        <div class="texto_video">
+          <h2>Nombre de la empresa ganadora</h2>
+          <h5>Descripción del spot ganador de la feria de empleo.</h5>
+        </div>
+        <div class="youtube-container">
+          <iframe width="1008" height="557"
+            src="https://www.youtube.com/embed/qHShoEjpOs"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        </div>
+      </div>
     </section>
 
     <section id="seccion-descargas">
@@ -66,7 +72,7 @@
       <p>Aquí podrás descargar información de la feria, programa, etc.</p>
     </section>
 
-    <footer>
+    <footer class="impar">
       Feria de Empleo de Irún &copy; 2025
     </footer>
   </main>
