--- a/empresas.html
+++ b/empresas.html
@@ -18,7 +18,7 @@
         <li><a href="index.html#seccion-sobrenosotros">Sobre Nosotros</a></li>
         <li><a href="index.html#seccion-ganador">Spot Ganador</a></li>
         <li><a href="index.html#seccion-descargas">Descargas</a></li>
-        <li><a href="inicio_sesion.html">Inicio de sesión</a></li>
+        <li><a href="#" onclick="logout(); return false;">Cerrar sesión</a></li>
         <li><a href="empresas.html">Empresas</a></li>
       </ul>
     </nav>
@@ -34,7 +34,7 @@
         <li><a href="index.html#seccion-sobrenosotros">Sobre Nosotros</a></li>
         <li><a href="index.html#seccion-ganador">Spot Ganador</a></li>
         <li><a href="index.html#seccion-descargas">Descargas</a></li>
-        <li><a href="inicio_sesion.html">Inicio de sesión</a></li>
+        <li><a href="#" onclick="logout(); return false;">Cerrar sesión</a></li>
         <li><a href="empresas.html">Empresas</a></li>
       </ul>
     </div>
@@ -52,5 +52,6 @@
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
+  <script src="auth-check.js"></script>
 </body>
 </html>
