--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="#seccion-sobrenosotros">Sobre Nosotros</a></li>
         <li><a href="#seccion-ganador">Spot Ganador</a></li>
         <li><a href="#seccion-descargas">Descargas</a></li>
-        <li><a href="inicio_sesion.html">Inicio de sesión</a></li>
+        <li><a href="javascript:void(0)" onclick="showLoginModal()">Inicio de sesión</a></li>
         <li><a href="empresas.html">Empresas</a></li>
       </ul>
     </nav>
@@ -33,7 +33,7 @@
         <li><a href="#seccion-sobrenosotros">Sobre Nosotros</a></li>
         <li><a href="#seccion-ganador">Spot Ganador</a></li>
         <li><a href="#seccion-descargas">Descargas</a></li>
-        <li><a href="inicio_sesion.html">Inicio de sesión</a></li>
+        <li><a href="javascript:void(0)" onclick="showLoginModal()">Inicio de sesión</a></li>
         <li><a href="empresas.html">Empresas</a></li>
       </ul>
     </div>
@@ -79,5 +79,48 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
+  
+  <!-- Include auth modal -->
+  <div id="loginModal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeLoginModal()">&times;</span>
+        <div class="auth-tabs">
+            <button class="auth-tab active" onclick="switchToLogin()">Iniciar sesión</button>
+            <button class="auth-tab" onclick="switchToRegister()">Registrarse</button>
+        </div>
+        
+        <!-- Login Form -->
+        <form id="loginForm">
+            <div class="mb-3">
+                <label for="loginEmail" class="form-label">Email</label>
+                <input type="email" class="form-control" id="loginEmail" required>
+            </div>
+            <div class="mb-3">
+                <label for="loginPassword" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="loginPassword" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Iniciar sesión</button>
+        </form>
+
+        <!-- Register Form -->
+        <form id="registerForm" style="display: none;">
+            <div class="mb-3">
+                <label for="registerEmail" class="form-label">Email</label>
+                <input type="email" class="form-control" id="registerEmail" required>
+            </div>
+            <div class="mb-3">
+                <label for="registerPassword" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="registerPassword" required>
+            </div>
+            <div class="mb-3">
+                <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
+                <input type="password" class="form-control" id="confirmPassword" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Registrarse</button>
+        </form>
+    </div>
+  </div>
+
+
 </body>
 </html>
