--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <header>
     <nav class="navbar">
       <ul>
-        <li><a href="#seccion-sobrenosotros">Sobre Nosotros</a></li>
         <li><a href="#seccion-ganador">Spot Ganador</a></li>
         <li><a href="#seccion-descargas">Descargas</a></li>
         <li><a href="javascript:void(0)" onclick="showLoginModal()">Inicio de sesión</a></li>
         <li><a href="empresas.html">Empresas</a></li>
+        <li><a href="#seccion-sobrenosotros">Sobre Nosotros</a></li>
       </ul>
     </nav>
 
@@ -44,20 +44,14 @@
   </header>
 
   <main>
-        
-    <section id="seccion-sobrenosotros">
-      <h2>Sobre Nosotros</h2>
-      <p>Sobre la empresa</p>
-    </section>
-
-    <section id="seccion-ganador" class="impar">
+    <section id="seccion-ganador">
       <div class="contenedor_video">
         <div class="texto_video">
           <h2>Nombre de la empresa ganadora</h2>
           <h5>Descripción del spot ganador de la feria de empleo.</h5>
         </div>
         <div class="youtube-container">
-          <iframe width="1008" height="557"
+          <iframe width="806,4" height="445,59"
             src="https://www.youtube.com/embed/qHShoEjpOs"
             title="YouTube video player"
             frameborder="0"
@@ -67,9 +61,14 @@
       </div>
     </section>
 
-    <section id="seccion-descargas">
+    <section id="seccion-descargas" class="impar">
       <h2>Descargas</h2>
       <p>Aquí podrás descargar información de la feria, programa, etc.</p>
+    </section>
+
+    <section id="seccion-sobrenosotros">
+      <h2>Sobre Nosotros</h2>
+      <p>Sobre la empresa</p>
     </section>
 
     <footer class="impar">
