--- a/empresas.html
+++ b/empresas.html
@@ -1,57 +1,151 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Feria de Empleo Irún</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8">
+    <title>Feria de Empleo Irún - Empresas</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="icon" type="image/png" href="./img/logo_salle_zgz.png"/>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  
-  <header>
-    <nav class="navbar">
-      <ul>
-        <li><a href="index.html#seccion-sobrenosotros">Sobre Nosotros</a></li>
-        <li><a href="index.html#seccion-ganador">Spot Ganador</a></li>
-        <li><a href="index.html#seccion-descargas">Descargas</a></li>
-        <li><a href="#" onclick="logout(); return false;">Cerrar sesión</a></li>
-        <li><a href="empresas.html">Empresas</a></li>
-      </ul>
-    </nav>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./img/logo_salle_zgz.png"/>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <header>
+      <nav class="navbar">
+        <ul>
+          <li><a href="index.html#seccion-sobrenosotros">Sobre Nosotros</a></li>
+          <li><a href="index.html#seccion-ganador">Spot Ganador</a></li>
+          <li><a href="index.html#seccion-descargas">Descargas</a></li>
+          <li><a href="#" onclick="logout(); return false;">Cerrar sesión</a></li>
+          <li><a href="empresas.html">Empresas</a></li>
+        </ul>
+      </nav>
 
-    <div class="bars__menu" id="barsMenu">
-      <span class="line1__bars-menu"></span>
-      <span class="line2__bars-menu"></span>
-      <span class="line3__bars-menu"></span>
-    </div>
+      <div class="bars__menu" id="barsMenu">
+        <span class="line1__bars-menu"></span>
+        <span class="line2__bars-menu"></span>
+        <span class="line3__bars-menu"></span>
+      </div>
 
-    <div class="hamburger-dropdown" id="hamburgerMenu">
-      <ul>
-        <li><a href="index.html#seccion-sobrenosotros">Sobre Nosotros</a></li>
-        <li><a href="index.html#seccion-ganador">Spot Ganador</a></li>
-        <li><a href="index.html#seccion-descargas">Descargas</a></li>
-        <li><a href="#" onclick="logout(); return false;">Cerrar sesión</a></li>
-        <li><a href="empresas.html">Empresas</a></li>
-      </ul>
-    </div>
+      <div class="hamburger-dropdown" id="hamburgerMenu">
+        <ul>
+          <li><a href="index.html#seccion-sobrenosotros">Sobre Nosotros</a></li>
+          <li><a href="index.html#seccion-ganador">Spot Ganador</a></li>
+          <li><a href="index.html#seccion-descargas">Descargas</a></li>
+          <li><a href="#" onclick="logout(); return false;">Cerrar sesión</a></li>
+          <li><a href="empresas.html">Empresas</a></li>
+        </ul>
+      </div>
 
-    <a href="index.html">
-      <img src="./img/logo_salle_zgz.png" alt="imagen_la_salle" class="logo">
-    </a>
-  </header>
-  <main>
-    <section>
-      <h2>Página de Empresas</h2>
-      <p>Contenido de empresas...</p>
-    </section>
-  </main>
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="script.js"></script>
-  <script src="auth-check.js"></script>
-</body>
+      <a href="index.html">
+        <img src="./img/logo_salle_zgz.png" alt="imagen_la_salle" class="logo">
+      </a>
+    </header>
+
+    <main>
+      <section>
+        <h2>Empresas Participantes</h2>
+        <p>Conoce a las empresas simuladas que participan en nuestra feria de empleo 2026.</p>
+
+        <div class="grid-empresas">
+
+          <div class="card-empresa">
+            <h3>LASI</h3>
+            <div class="card-tags">
+              <span class="badge-centro">INCA</span>
+              <span class="badge-grado">Grado Básico</span>
+            </div>
+            <p class="card-desc">Proyecto de moda y diseño. Actividad creativa enfocada en tendencias actuales.</p>
+            <div class="card-actions">
+              <a href="mailto:fashioncolasalle@gmail.com" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
+              <a href="https://jonathancobas5.wixsite.com/lasi" target="_blank" class="btn-web">Visitar Web</a>
+            </div>
+          </div>
+
+          <div class="card-empresa">
+            <h3>EPIWORKS</h3>
+            <div class="card-tags">
+              <span class="badge-centro">INSTITUCIÓN LA SALLE</span>
+              <span class="badge-grado">Grado Medio</span>
+            </div>
+            <p class="card-desc">Venta al por mayor de equipos de protección individual y vestimenta laboral.</p>
+            <div class="card-actions">
+              <a href="mailto:epiworks.sefed@lasalleinstitucion.es" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
+              <a href="https://epiworkssefed.wixsite.com/epiworks" target="_blank" class="btn-web">Visitar Web</a>
+            </div>
+          </div>
+
+          <div class="card-empresa">
+            <h3>ZAPALDU</h3>
+            <div class="card-tags">
+              <span class="badge-centro">IRUNGO LA SALLE</span>
+              <span class="badge-grado">Grado Superior</span>
+            </div>
+            <p class="card-desc">Diseño, fabricación y venta de zapatillas personalizadas y sostenibles con tecnología incorporada.</p>
+            <div class="card-actions">
+              <a href="mailto:zapalduinfo@gmail.com" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
+              <a href="" class="btn-web btn-disabled">Web no disponible</a>
+            </div>
+          </div>
+
+          <div class="card-empresa">
+            <h3>PAPERMAS</h3>
+            <div class="card-tags">
+              <span class="badge-centro">LA SALLE SAGRADO CORAZÓN</span>
+              <span class="badge-grado">Grado Medio</span>
+            </div>
+            <p class="card-desc">Distribución y venta de artículos de papelería y material de oficina.</p>
+            <div class="card-actions">
+              <a href="mailto:reception@papermas.com" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
+              <a href="https://sites.google.com/lasallemundonuevo.es/papermas/inicio" target="_blank" class="btn-web">Visitar Web</a>
+            </div>
+          </div>
+
+          <div class="card-empresa">
+            <h3>OFIDESIGN</h3>
+            <div class="card-tags">
+              <span class="badge-centro">LA SALLE JEREZ</span>
+              <span class="badge-grado">Grado Medio</span>
+            </div>
+            <p class="card-desc">Comercialización de mobiliario de oficina y diseño de espacios personalizados para entornos laborales.</p>
+            <div class="card-actions">
+              <a href="mailto:reception@offidesign.com" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
+              <a href="https://sites.google.com/d/1seS089uDtdCk8N3gR5pFFCzktYqjSWwR/p/1nIuqsqro521e8BDYW5Zp-4gGrROtT_pq/edit" target="_blank" class="btn-web">Visitar Web</a>
+            </div>
+          </div>
+
+          <div class="card-empresa">
+            <h3>TECNUS</h3>
+            <div class="card-tags">
+              <span class="badge-centro">LA SALLE MADRID</span>
+              <span class="badge-grado">Grado Superior</span>
+            </div>
+            <p class="card-desc">Comercialización de productos tecnológicos e innovación.</p>
+            <div class="card-actions">
+              <a href="mailto:tecnusventas@lasallesagradocorazon.es" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
+              <a href="" class="btn-web btn-disabled">Web no disponible</a>
+            </div>
+          </div>
+
+          <div class="card-empresa">
+            <h3>AUREAL SL</h3>
+            <div class="card-tags">
+              <span class="badge-centro">LA SALLE MADRID</span>
+              <span class="badge-grado">Grado Medio</span>
+            </div>
+            <p class="card-desc">Servicios de limpieza profesional y mantenimiento.</p>
+            <div class="card-actions">
+              <a href="mailto:empresasimnulada1@lasallesagradocorazon.es" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
+              <a href="" class="btn-web btn-disabled">Web no disponible</a>
+            </div>
+          </div>
+
+        </div>
+      </section>
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
+    <script src="auth-check.js"></script>
+  </body>
 </html>
