--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
     <div class="hamburger-dropdown" id="hamburgerMenu">
       <ul>
-        <li><a href="#seccion-sobrenosotros">Sobre Nosotros</a></li>
         <li><a href="#seccion-ganador">Spot Ganador</a></li>
         <li><a href="#seccion-descargas">Descargas</a></li>
+        <li><a href="#seccion-sobrenosotros">Sobre Nosotros</a></li>
         <li><a href="javascript:void(0)" onclick="showLoginModal()">Inicio de sesión</a></li>
         <li><a href="empresas.html">Empresas</a></li>
       </ul>
@@ -52,7 +52,7 @@
         </div>
         <div class="youtube-container">
           <iframe width="806,4" height="445,59"
-            src="https://www.youtube.com/embed/qHShoEjpOs"
+            src="https://www.youtube.com/embed/iOkxDhId5l8"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -63,12 +63,48 @@
 
     <section id="seccion-descargas" class="impar">
       <h2>Descargas</h2>
-      <p>Aquí podrás descargar información de la feria, programa, etc.</p>
+      <p>Haz clic <a href="Bases_del_Concurso_de_Spot_Publicitario_LSBM_2026.pdf" download="Bases_del_Concurso_de_Spot_Publicitario_LSBM_2026">aquí</a> para descargar las bases del concurso</p>
     </section>
 
     <section id="seccion-sobrenosotros">
       <h2>Sobre Nosotros</h2>
-      <p>Sobre la empresa</p>
+      <p><div class="grid-empresas">
+
+        <div class="card-empresa">
+          <h3><b>ISRAEL CARBONELL MENAL</b></h3>
+          <div class="card-tags">
+            <span class="badge-centro">ALUMNO LA SALLE SANTO ÁNGEL</span>
+            <span class="badge-grado">CSI2</span>
+          </div>
+          <p class="card-desc">Desarrollador backend HTML y CSS</p>
+          <div class="card-actions">
+            <a href="mailto:israelcarbonellmenal@lasallesantoangel.es" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
+          </div>
+        </div>
+
+        <div class="card-empresa">
+          <h3><b>IZAN RUIZ MORER</b></h3>
+          <div class="card-tags">
+            <span class="badge-centro">ALUMNO LA SALLE SANTO ÁNGEL</span>
+            <span class="badge-grado">CSI2</span>
+          </div>
+          <p class="card-desc">Desarrollador frontend JavaScript y gestor de bases de datos</p>
+          <div class="card-actions">
+            <a href="mailto:izanruizmorer@lasallesantoangel.es" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
+          </div>
+        </div>
+
+        <div class="card-empresa">
+          <h3><b>PABLO MAZA PEÓN</b></h3>
+          <div class="card-tags">
+            <span class="badge-centro">ALUMNO LA SALLE SANTO ÁNGEL</span>
+            <span class="badge-grado">CSI2</span>
+          </div>
+          <p class="card-desc">Desarrollador backend Python</p>
+          <div class="card-actions">
+            <a href="mailto:pablomazapeon@lasallesantoangel.es" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
+          </div>
+        </div></p>
     </section>
 
     <footer class="impar">
