--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="contenedor_video">
         <div class="texto_video">
           <h2>Nombre de la empresa ganadora</h2>
-          <h5>Descripción del spot ganador de la feria de empleo.</h5>
+          <p>Descripción del spot ganador de la feria de empleo.</p>
         </div>
         <div class="youtube-container">
           <iframe width="806,4" height="445,59"
