--- a/empresas.html
+++ b/empresas.html
@@ -38,8 +38,8 @@
       </ul>
     </div>
 
-    <a href="index.html">
-      <img src="./img/logo_salle_zgz.png" alt="imagen_la_salle" class="logo">
+    <a href="index.html" class="logo">
+      <img src="./img/logo_salle_zgz.png" alt="imagen_la_salle">
     </a>
   </header>
 
@@ -364,6 +364,9 @@
 
       </div>
     </section>
+    <footer class="impar">
+      Feria de Empleo de Irún &copy; 2025
+    </footer>
   </main>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
