--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
       </ul>
     </div>
 
-    <a href="index.html">
-      <img src="./img/logo_salle_zgz.png" alt="imagen_la_salle" class="logo">
+    <a href="index.html" class="logo">
+      <img src="./img/logo_salle_zgz.png" alt="imagen_la_salle">
     </a>
   </header>
 
   <main>
     <section id="seccion-ganador">
-      <div class="contenedor_video">
+     
         <div class="texto_video">
-          <h2>Nombre de la empresa ganadora</h2>
-          <p>Descripción del spot ganador de la feria de empleo.</p>
+          <h2>La Salle Santo Ángel</h2>
+          <p>Somos el mejor colegio de todos</p>
         </div>
         <div class="youtube-container">
           <iframe width="806,4" height="445,59"
@@ -58,7 +58,7 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
         </div>
-      </div>
+      
     </section>
 
     <section id="seccion-descargas" class="impar">
@@ -104,7 +104,42 @@
           <div class="card-actions">
             <a href="mailto:pablomazapeon@lasallesantoangel.es" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
           </div>
-        </div></p>
+        </div>
+        <div class="card-empresa">
+          <h3><b>ALUMNO 1 IRUN</b></h3>
+          <div class="card-tags">
+            <span class="badge-centro">ALUMNO LA SALLE IRUN</span>
+            <span class="badge-grado">ADE</span>
+          </div>
+          <p class="card-desc">Jaja economia</p>
+          <div class="card-actions">
+            <a href="mailto:@lasallesantoangel.es" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
+          </div>
+        </div>
+
+        <div class="card-empresa">
+          <h3><b>ALUMNO 2 IRUN</b></h3>
+          <div class="card-tags">
+            <span class="badge-centro">ALUMNO LA SALLE IRUN</span>
+            <span class="badge-grado">ADE</span>
+          </div>
+          <p class="card-desc">Jaja economia</p>
+          <div class="card-actions">
+            <a href="mailto:@lasallesantoangel.es" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
+          </div>
+        </div>
+
+        <div class="card-empresa">
+          <h3><b>ALUMNO 3 IRUN</b></h3>
+          <div class="card-tags">
+            <span class="badge-centro">ALUMNO LA SALLE IRUN</span>
+            <span class="badge-grado">ADE</span>
+          </div>
+          <p class="card-desc">Jaja economia</p>
+          <div class="card-actions">
+            <a href="mailto:@lasallesantoangel.es" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
+          </div>
+        </div>
     </section>
 
     <footer class="impar">
