--- a/inicio_sesion.html
+++ b/inicio_sesion.html
@@ -39,8 +39,8 @@
       </ul>
     </div>
 
-    <a href="index.html">
-      <img src="./img/logo_salle_zgz.png" alt="imagen_la_salle" class="logo">
+    <a href="index.html" class="logo">
+      <img src="./img/logo_salle_zgz.png" alt="imagen_la_salle">
     </a>
   </header>
   <main>
@@ -83,6 +83,9 @@
             </section>
         </form>
     </div>  
+    <footer class="impar">
+      Feria de Empleo de Irún &copy; 2025
+    </footer>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
