--- a/empresas.html
+++ b/empresas.html
@@ -14,6 +14,7 @@
   <header>
     <nav class="navbar">
       <ul>
+        <li><a href="#seccion-carrusel">Introducción</a></li>
         <li><a href="index.html#seccion-ganador">Spot Ganador</a></li>
         <li><a href="index.html#seccion-descargas">Descargas</a></li>
         <li><a href="index.html#seccion-sobrenosotros">Sobre Nosotros</a></li>
@@ -30,6 +31,7 @@
 
     <div class="hamburger-dropdown" id="hamburgerMenu">
       <ul>
+        <li><a href="#seccion-carrusel">Introducción</a></li>
         <li><a href="index.html#seccion-ganador">Spot Ganador</a></li>
         <li><a href="index.html#seccion-sobrenosotros">Sobre Nosotros</a></li>
         <li><a href="index.html#seccion-descargas">Descargas</a></li>
