--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <header>
     <nav class="navbar">
       <ul>
+        <li><a href="#seccion-carrusel">Introducción</a></li>
         <li><a href="#seccion-ganador">Spot Ganador</a></li>
         <li><a href="#seccion-descargas">Descargas</a></li>
         <li><a href="#seccion-sobrenosotros">Sobre Nosotros</a></li>
@@ -30,6 +31,7 @@
 
     <div class="hamburger-dropdown" id="hamburgerMenu">
       <ul>
+        <li><a href="#seccion-carrusel">Introducción</a></li>
         <li><a href="#seccion-ganador">Spot Ganador</a></li>
         <li><a href="#seccion-descargas">Descargas</a></li>
         <li><a href="#seccion-sobrenosotros">Sobre Nosotros</a></li>
@@ -44,9 +46,60 @@
   </header>
 
   <main>
-    <section id="seccion-ganador">
+    <section id="seccion-carrusel" class="impar">
+      <div class="carrusel-comtenedor">  
+        <div id="carouselExampleCaptions" class="carousel slide">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/feria_empleo.jpeg" class="d-block w-100" alt="Feria de empleo">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Feria de Empleo</h5>
+                <p>23 de Enero de 2026</p>
+                <p>+20 empresas ya inscritas en el programa</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="img/edificio_santo_angel.jpg" class="d-block w-100" alt="La salle Zaragoza">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>La Salle Santo Ángel</h5>
+                <p>Desarrolladores de la página web</p>
+                <p>Futuros programadores legendarios</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="img/edificio_irun.jpg" class="d-block w-100" alt="La salle Irun">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>La Salle Irún</h5>
+                <p>JAJA ADE</p>
+                <p>No tenemos ni sus nombres completos</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section id="seccion-descargas">
+      <h2>Descargas</h2>
+      <p>Haz clic <a href="Bases_del_Concurso_de_Spot_Publicitario_LSBM_2026.pdf" download="Bases_del_Concurso_de_Spot_Publicitario_LSBM_2026">aquí</a> para descargar las bases del concurso</p>
+    </section>
+
+    <section id="seccion-ganador" class="impar">
      
-        <div class="texto_video">
+        <div class="texto_video" >
           <h2>La Salle Santo Ángel</h2>
           <p>Somos el mejor colegio de todos</p>
         </div>
@@ -59,11 +112,6 @@
             allowfullscreen></iframe>
         </div>
       
-    </section>
-
-    <section id="seccion-descargas" class="impar">
-      <h2>Descargas</h2>
-      <p>Haz clic <a href="Bases_del_Concurso_de_Spot_Publicitario_LSBM_2026.pdf" download="Bases_del_Concurso_de_Spot_Publicitario_LSBM_2026">aquí</a> para descargar las bases del concurso</p>
     </section>
 
     <section id="seccion-sobrenosotros">
