--- a/inicio_sesion.html
+++ b/inicio_sesion.html
@@ -15,6 +15,7 @@
   <header>
     <nav class="navbar">
       <ul>
+        <li><a href="#seccion-carrusel">Introducción</a></li>
         <li><a href="index.html#seccion-ganador">Spot Ganador</a></li>
         <li><a href="index.html#seccion-descargas">Descargas</a></li>
         <li><a href="index.html#seccion-sobrenosotros">Sobre Nosotros</a></li>
@@ -31,6 +32,7 @@
 
     <div class="hamburger-dropdown" id="hamburgerMenu">
       <ul>
+        <li><a href="#seccion-carrusel">Introducción</a></li>
         <li><a href="index.html#seccion-ganador">Spot Ganador</a></li>
         <li><a href="index.html#seccion-descargas">Descargas</a></li>
         <li><a href="index.html#seccion-sobrenosotros">Sobre Nosotros</a></li>
