--- a/empresas.html
+++ b/empresas.html
@@ -14,9 +14,9 @@
   <header>
     <nav class="navbar">
       <ul>
-        <li><a href="#seccion-carrusel">Introducción</a></li>
-        <li><a href="index.html#seccion-ganador">Spot Ganador</a></li>
+        <li><a href="index.html#seccion-carrusel">Introducción</a></li>
         <li><a href="index.html#seccion-descargas">Descargas</a></li>
+        <li><a href="index.html#seccion-ganador">Spot Ganador</a></li>
         <li><a href="index.html#seccion-sobrenosotros">Sobre Nosotros</a></li>
         <li><a href="#" onclick="logout(); return false;">Cerrar sesión</a></li>
         <li><a href="empresas.html">Empresas</a></li>
@@ -31,10 +31,10 @@
 
     <div class="hamburger-dropdown" id="hamburgerMenu">
       <ul>
-        <li><a href="#seccion-carrusel">Introducción</a></li>
+        <li><a href="index.html#seccion-carrusel">Introducción</a></li>
+        <li><a href="index.html#seccion-descargas">Descargas</a></li>
         <li><a href="index.html#seccion-ganador">Spot Ganador</a></li>
         <li><a href="index.html#seccion-sobrenosotros">Sobre Nosotros</a></li>
-        <li><a href="index.html#seccion-descargas">Descargas</a></li>
         <li><a href="#" onclick="logout(); return false;">Cerrar sesión</a></li>
         <li><a href="empresas.html">Empresas</a></li>
       </ul>
