--- a/inicio_sesion.html
+++ b/inicio_sesion.html
@@ -15,9 +15,9 @@
   <header>
     <nav class="navbar">
       <ul>
-        <li><a href="#seccion-carrusel">Introducción</a></li>
+        <li><a href="index.html#seccion-carrusel">Introducción</a></li>
+        <li><a href="#seccion-descargas">Descargas</a></li>
         <li><a href="index.html#seccion-ganador">Spot Ganador</a></li>
-        <li><a href="index.html#seccion-descargas">Descargas</a></li>
         <li><a href="index.html#seccion-sobrenosotros">Sobre Nosotros</a></li>
         <li><a href="inicio_sesion.html">Inicio de sesión</a></li>
         <li><a href="empresas.html">Empresas</a></li>
@@ -32,9 +32,9 @@
 
     <div class="hamburger-dropdown" id="hamburgerMenu">
       <ul>
-        <li><a href="#seccion-carrusel">Introducción</a></li>
-        <li><a href="index.html#seccion-ganador">Spot Ganador</a></li>
+        <li><a href="index.html#seccion-carrusel">Introducción</a></li>
         <li><a href="index.html#seccion-descargas">Descargas</a></li>
+        <li><a href="index.html#seccion-ganador">Spot Ganador</a></li>
         <li><a href="index.html#seccion-sobrenosotros">Sobre Nosotros</a></li>
         <li><a href="inicio_sesion.html">Inicio de sesión</a></li>
         <li><a href="empresas.html">Empresas</a></li>
