--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <nav class="navbar">
       <ul>
         <li><a href="#seccion-carrusel">Introducción</a></li>
-        <li><a href="#seccion-ganador">Spot Ganador</a></li>
         <li><a href="#seccion-descargas">Descargas</a></li>
+        <li><a href="#seccion-ganador">Spot Ganador</a></li>
         <li><a href="#seccion-sobrenosotros">Sobre Nosotros</a></li>
         <li><a href="javascript:void(0)" onclick="showLoginModal()">Inicio de sesión</a></li>
         <li><a href="empresas.html">Empresas</a></li>
@@ -32,8 +32,8 @@
     <div class="hamburger-dropdown" id="hamburgerMenu">
       <ul>
         <li><a href="#seccion-carrusel">Introducción</a></li>
-        <li><a href="#seccion-ganador">Spot Ganador</a></li>
         <li><a href="#seccion-descargas">Descargas</a></li>
+        <li><a href="#seccion-ganador">Spot Ganador</a></li>
         <li><a href="#seccion-sobrenosotros">Sobre Nosotros</a></li>
         <li><a href="javascript:void(0)" onclick="showLoginModal()">Inicio de sesión</a></li>
         <li><a href="empresas.html">Empresas</a></li>
@@ -57,27 +57,12 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="img/feria_empleo.jpeg" class="d-block w-100" alt="Feria de empleo">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Feria de Empleo</h5>
-                <p>23 de Enero de 2026</p>
-                <p>+20 empresas ya inscritas en el programa</p>
-              </div>
             </div>
             <div class="carousel-item">
               <img src="img/edificio_santo_angel.jpg" class="d-block w-100" alt="La salle Zaragoza">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>La Salle Santo Ángel</h5>
-                <p>Desarrolladores de la página web</p>
-                <p>Futuros programadores legendarios</p>
-              </div>
             </div>
             <div class="carousel-item">
               <img src="img/edificio_irun.jpg" class="d-block w-100" alt="La salle Irun">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>La Salle Irún</h5>
-                <p>JAJA ADE</p>
-                <p>No tenemos ni sus nombres completos</p>
-              </div>
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -146,7 +131,7 @@
           <h3><b>PABLO MAZA PEÓN</b></h3>
           <div class="card-tags">
             <span class="badge-centro">ALUMNO LA SALLE SANTO ÁNGEL</span>
-            <span class="badge-grado">CSI2</span>
+            <span class="badge-grado">CSGE2</span>
           </div>
           <p class="card-desc">Desarrollador backend Python</p>
           <div class="card-actions">
@@ -157,7 +142,7 @@
           <h3><b>ALUMNO 1 IRUN</b></h3>
           <div class="card-tags">
             <span class="badge-centro">ALUMNO LA SALLE IRUN</span>
-            <span class="badge-grado">ADE</span>
+            <span class="badge-grado">CSGE2</span>
           </div>
           <p class="card-desc">Jaja economia</p>
           <div class="card-actions">
@@ -169,7 +154,7 @@
           <h3><b>ALUMNO 2 IRUN</b></h3>
           <div class="card-tags">
             <span class="badge-centro">ALUMNO LA SALLE IRUN</span>
-            <span class="badge-grado">ADE</span>
+            <span class="badge-grado">CSGE2</span>
           </div>
           <p class="card-desc">Jaja economia</p>
           <div class="card-actions">
@@ -181,7 +166,7 @@
           <h3><b>ALUMNO 3 IRUN</b></h3>
           <div class="card-tags">
             <span class="badge-centro">ALUMNO LA SALLE IRUN</span>
-            <span class="badge-grado">ADE</span>
+            <span class="badge-grado">CSGE2</span>
           </div>
           <p class="card-desc">Jaja economia</p>
           <div class="card-actions">
