--- a/empresas.html
+++ b/empresas.html
@@ -46,7 +46,7 @@
   </header>
 
   <main>
-    <section>
+    <section class="impar">
       <h2>Empresas Participantes</h2>
       <p style="margin-bottom: 30px;">Descubre todas las empresas simuladas que forman parte de nuestra feria de empleo.</p>
       
@@ -364,6 +364,13 @@
           </div>
         </div>
 
+      </div>
+    </section>
+    <section>
+      <div>
+        <h2>Votación de SPOT</h2>
+        <p>Elija su spot preferido</p>
+        
       </div>
     </section>
     <footer class="impar">
