--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <img src="img/edificio_santo_angel.jpg" class="d-block w-100" alt="La salle Zaragoza">
             </div>
             <div class="carousel-item">
-              <img src="img/edificio_irun.jpg" class="d-block w-100" alt="La salle Irun">
+              <img src="img/edificio_irun.png" class="d-block w-100" alt="La salle Irun">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -131,7 +131,7 @@
           <h3><b>PABLO MAZA PEÓN</b></h3>
           <div class="card-tags">
             <span class="badge-centro">ALUMNO LA SALLE SANTO ÁNGEL</span>
-            <span class="badge-grado">CSGE2</span>
+            <span class="badge-grado">CSI2</span>
           </div>
           <p class="card-desc">Desarrollador backend Python</p>
           <div class="card-actions">
@@ -139,38 +139,49 @@
           </div>
         </div>
         <div class="card-empresa">
-          <h3><b>ALUMNO 1 IRUN</b></h3>
+          <h3><b>RUBEN FERNÁNDEZ VILLANUEVA</b></h3>
           <div class="card-tags">
             <span class="badge-centro">ALUMNO LA SALLE IRUN</span>
             <span class="badge-grado">CSGE2</span>
           </div>
           <p class="card-desc">Jaja economia</p>
           <div class="card-actions">
-            <a href="mailto:@lasallesantoangel.es" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
+            <a href="mailto:rubenfernandezvillanueva@irungolasalle.eus" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
           </div>
         </div>
 
         <div class="card-empresa">
-          <h3><b>ALUMNO 2 IRUN</b></h3>
+          <h3><b>OIER MERINO ARAMBURU</b></h3>
           <div class="card-tags">
             <span class="badge-centro">ALUMNO LA SALLE IRUN</span>
             <span class="badge-grado">CSGE2</span>
           </div>
           <p class="card-desc">Jaja economia</p>
           <div class="card-actions">
-            <a href="mailto:@lasallesantoangel.es" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
+            <a href="mailto:oiermerinoaramburu@irungolasalle.eus" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
           </div>
         </div>
 
         <div class="card-empresa">
-          <h3><b>ALUMNO 3 IRUN</b></h3>
+          <h3><b>ARITZ GOICOECHEA LARBURU</b></h3>
           <div class="card-tags">
             <span class="badge-centro">ALUMNO LA SALLE IRUN</span>
             <span class="badge-grado">CSGE2</span>
           </div>
           <p class="card-desc">Jaja economia</p>
           <div class="card-actions">
-            <a href="mailto:@lasallesantoangel.es" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
+            <a href="mailto:aritzgoicoechealarburu@irungolasalle.eus" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
+          </div>
+        </div>
+        <div class="card-empresa">
+          <h3><b>IRATI OTAMENDI MAIZ</b></h3>
+          <div class="card-tags">
+            <span class="badge-centro">ALUMNO LA SALLE IRUN</span>
+            <span class="badge-grado">CSGE2</span>
+          </div>
+          <p class="card-desc">Jaja economia</p>
+          <div class="card-actions">
+            <a href="mailto:iotamendi@irungolasalle.eus" class="btn-email" title="Enviar Correo"><i class="bi bi-envelope-fill"></i></a>
           </div>
         </div>
     </section>
