--- a/index.html
+++ b/index.html
@@ -65,14 +65,15 @@
               <img src="img/edificio_irun.png" class="d-block w-100" alt="La salle Irun">
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+         <button class="carousel-control-prev rounded-circle bg-dark" style="width: 50px; height: 50px; top: 50%; bottom: auto; transform: translateY(-50%); opacity: 1;" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" style="width: 20px; height: 20px;" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        
+        <button class="carousel-control-next rounded-circle bg-dark" style="width: 50px; height: 50px; top: 50%; bottom: auto; transform: translateY(-50%); opacity: 1;" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" style="width: 20px; height: 20px;" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
         </div>
       </div>
     </section>
